Added gradient to top and bottom of stickys

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             &times
         </button>
         <textarea class="stickyTextLeft" id="textL" onkeyup="updateNote()"></textarea>
+        <div class="noteGradient noteGradientTop"></div>
+        <div class="noteGradient"></div>
     </div>
 
     <div class="stickyMiddle">
@@ -39,6 +41,8 @@
             &times
         </button>
         <textarea class="stickyTextMiddle" id="textM" onkeyup="updateNote()"></textarea>
+        <div class="noteGradient noteGradientTop"></div>
+        <div class="noteGradient"></div>
     </div>
 
     <div class="stickyRight">
@@ -46,6 +50,8 @@
             &times
         </button>
         <textarea class="stickyTextRight" id="textR" onkeyup="updateNote()"></textarea>
+        <div class="noteGradient noteGradientTop"></div>
+        <div class="noteGradient"></div>
     </div>
 </body>
 
