Changed favicon & title, added icons, and further adjusted mobile sizing

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dashboard</title>
+    <title>Homepage</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="shortcut icon" href="logoIcon.ico"/>
     <script src="javascript.js"></script>
     
 </head>
@@ -22,9 +23,17 @@
         </button>
     </div>
 
+    <div class="midLeft">
+        <img class="logo" src="Space Cube Logo v3.png">
+    </div>
+
     <div class="dateTime">
         <h1 id="time"></h1>
         <h2 id="date"></h2>
+    </div>
+
+    <div class="midRight">
+        <img class="logo" src="Space Cube Logo v3.png">
     </div>
 
     <div class="stickyLeft">
