Changed notes to be eventlistener based and added tab functionality

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <button class="closeStickyLeft" id="closeL" onclick="eraseNote()">
             &times
         </button>
-        <textarea class="stickyTextLeft" id="textL" onkeyup="updateNote()"></textarea>
+        <textarea class="stickyTextLeft" id="textL"></textarea>
         <div class="noteGradient noteGradientTop"></div>
         <div class="noteGradient"></div>
     </div>
@@ -49,7 +49,7 @@
         <button class="closeStickyMiddle" id="closeM" onclick="eraseNote()">
             &times
         </button>
-        <textarea class="stickyTextMiddle" id="textM" onkeyup="updateNote()"></textarea>
+        <textarea class="stickyTextMiddle" id="textM"></textarea>
         <div class="noteGradient noteGradientTop"></div>
         <div class="noteGradient"></div>
     </div>
@@ -58,7 +58,7 @@
         <button class="closeStickyRight" id="closeR" onclick="eraseNote()">
             &times
         </button>
-        <textarea class="stickyTextRight" id="textR" onkeyup="updateNote()"></textarea>
+        <textarea class="stickyTextRight" id="textR"></textarea>
         <div class="noteGradient noteGradientTop"></div>
         <div class="noteGradient"></div>
     </div>
