initial dev branch

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 class="searchText"
                 id="searchText"
                 onkeypress="enterSearch()"
+                placeholder="dev branch"
                 autofocus
             />
             <button
