--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <!-- Local Files -->
         <!-- Media -->
-        <link rel="shortcut icon" href="logoIcon.ico" />
+        <link rel="shortcut icon" href="icons/logoIcon.ico" />
         <!-- CSS -->
         <link
             type="text/css"
@@ -22,6 +22,7 @@
             href="css/materialize.min.css"
             media="screen,projection"
         />
+        <link type="text/css" rel="stylesheet" href="css/style.css" />
         <!-- JS -->
         <script type="text/javascript" src="js/materialize.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
@@ -49,6 +50,25 @@
                 <!-- Time / Date -->
                 <h1 id="time"></h1>
                 <h4 id="date"></h4>
+
+                <!-- Weather -->
+                <div class="container">
+                    <div class="notification"></div>
+                    <div class="weather-container">
+                        <div class="weather-icon">
+                            <img src="icons/unknown.png" alt="" />
+                        </div>
+                        <div class="temperature-value">
+                            <p>- °<span>F</span></p>
+                        </div>
+                        <div class="temperature-description">
+                            <p>-</p>
+                        </div>
+                        <div class="location">
+                            <p>-</p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- Right Section -->
@@ -58,7 +78,7 @@
                     class="dropdown-trigger btn-large white blue-grey-text"
                     href="#"
                     data-target="cardListDropdown"
-                    style="width: 100%; margin-bottom: 5px"
+                    style="width: 100%; margin-bottom: 7.5px"
                     id="cardListBtn"
                 ></a>
                 <ul id="cardListDropdown" class="dropdown-content">
@@ -89,5 +109,8 @@
                 </a>
             </div>
         </div>
+
+        <!-- Local Weather JS -->
+        <script src="js/app.js"></script>
     </body>
 </html>
