updated navbar & toasts design

--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
     <!-- Main Body -->
     <body class="blue-grey darken-4 white-text">
         <!-- Nav bar -->
-        <div class="row white black-text" style="text-align: center">
+        <div class="row white navBar">
             <a
-                class="col s2 l1 btn-large white waves-effect hoverable black-text left"
-                ><i class="material-icons left">code</i>PREV</a
+                class="col m2 hide-on-small-only btn-large white waves-effect hoverable blue-grey-text left"
+                ><i class="material-icons left">chevron_left</i>PREV</a
             >
-            <a class="col s8 l10 btn-large btn-flat white"><b>HOMEPAGE</b></a>
+            <a class="col s12 m8 btn-large btn-flat white blue-grey-text"
+                ><b>HOMEPAGE</b></a
+            >
             <a
-                class="col s2 l1 btn-large white waves-effect hoverable black-text right"
-                ><i class="material-icons right">code</i>NEXT</a
+                class="col m2 hide-on-small-only btn-large white waves-effect hoverable blue-grey-text right"
+                ><i class="material-icons right">chevron_right</i>NEXT</a
             >
         </div>
 
@@ -101,7 +103,7 @@
                     class="btn-large blue-grey waves-effect waves-light hoverable"
                     style="width: 100%"
                     onclick="createNewCard()"
-                    onmouseover="this.style.color='cyan';"
+                    onmouseover="this.style.color='#00bfa5';"
                     onmouseout="this.style.color='';"
                 >
                     <!-- Button Icon -->
