updated look of card buttons and weather panel

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
             <div class="col s12 m6">
                 <!-- Card List Selector -->
                 <a
-                    class="dropdown-trigger btn-large white blue-grey-text"
+                    class="dropdown-trigger btn-large white blue-grey-text col s12"
                     href="#"
                     data-target="cardListDropdown"
-                    style="width: 100%; margin-bottom: 7.5px"
+                    style="margin-bottom: 7.5px"
                     id="cardListBtn"
                 ></a>
                 <ul id="cardListDropdown" class="dropdown-content">
@@ -100,8 +100,7 @@
 
                 <!-- Add Card Button -->
                 <a
-                    class="btn-large blue-grey waves-effect waves-light hoverable"
-                    style="width: 100%"
+                    class="btn-large blue-grey waves-effect waves-light hoverable col s12"
                     onclick="createNewCard()"
                     onmouseover="this.style.color='#00bfa5';"
                     onmouseout="this.style.color='';"
