fixed page 3 - testing

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
         </div>
         <div class="row" id="page3">
             <div class="col s12">
-                <h1>Page 3</h1>
+                <h1>Page 3 - Testing</h1>
                 <iframe
-                    src="http://127.0.0.1:5500/#!"
+                    src="https://zerossive.github.io/Homepage/"
                     width="75%"
                     height="650"
                 ></iframe>
