added connection to WebSocket server

--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
         <div class="row" id="page3">
             <div class="col s12">
                 <h1>Page 3 - Testing</h1>
-                <iframe
+                <!-- <iframe
                     src="https://zerossive.github.io/Homepage/"
                     width="75%"
                     height="650"
-                ></iframe>
+                ></iframe> -->
             </div>
         </div>
 
