implemented card position changing, improved pages

--- a/index.html
+++ b/index.html
@@ -36,19 +36,21 @@
         <!-- Nav bar -->
         <div class="row white navBar">
             <a
-                class="col m2 hide-on-small-only btn-large white waves-effect hoverable blue-grey-text left"
+                class="col s2 m2 btn-large white waves-effect hoverable blue-grey-text left"
                 id="prevBtn"
-                ><i class="material-icons left">chevron_left</i>PREV</a
+                ><i class="material-icons left" id="prevBtn">chevron_left</i
+                >PREV</a
             >
             <a
-                class="col s12 m8 btn-large btn-flat white blue-grey-text"
+                class="col s8 m8 btn-large btn-flat white blue-grey-text"
                 id="homepageBtn"
                 ><b>HOMEPAGE</b></a
             >
             <a
-                class="col m2 hide-on-small-only btn-large white waves-effect hoverable blue-grey-text right"
+                class="col s2 m2 btn-large white waves-effect hoverable blue-grey-text right"
                 id="nextBtn"
-                ><i class="material-icons right">chevron_right</i>NEXT</a
+                ><i class="material-icons right" id="nextBtn">chevron_right</i
+                >NEXT</a
             >
         </div>
 
@@ -124,8 +126,8 @@
             <div class="col s12">
                 <h1>Schedule</h1>
                 <iframe
-                    src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=ZGFubnloYXJyaXMxMUB0YW11LmVkdQ&amp;src=Y192NGZlYTYwOHQwZ3RubWptcXVwMmQ1NmYza0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;src=Y183dXRnNTVscHE4ZW9jZ3VjdHBtbnFpNXNya0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23039BE5&amp;color=%2333B679&amp;color=%23E67C73&amp;color=%237986CB&amp;color=%23616161&amp;showTitle=0&amp;showNav=1&amp;showDate=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0"
-                    style="border-width: 0"
+                    src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=ZGFubnloYXJyaXMxMUB0YW11LmVkdQ&amp;src=Y192NGZlYTYwOHQwZ3RubWptcXVwMmQ1NmYza0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;src=Y183dXRnNTVscHE4ZW9jZ3VjdHBtbnFpNXNya0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23039BE5&amp;color=%2333B679&amp;color=%23E67C73&amp;color=%237986CB&amp;color=%23616161&amp;showNav=1&amp;showTitle=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=1&amp;showTz=0&amp;showCalendars=0&amp;mode=WEEK"
+                    style="border-width: 0; border-radius: 5px"
                     width="75%"
                     height="650"
                     frameborder="0"
