added cookie for current card list

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             >
         </div>
 
-        <!-- Main Content -->
+        <!-- Notes Page -->
         <div class="row" id="notesPage">
             <!-- Left Section -->
             <div class="col s12 m6 center-align" id="timeArea">
@@ -122,6 +122,7 @@
 
         <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
 
+        <!-- Page 2 -->
         <div class="row" id="page2">
             <div class="col s12">
                 <h1>Schedule</h1>
@@ -135,6 +136,8 @@
                 ></iframe>
             </div>
         </div>
+
+        <!-- Page 3 -->
         <div class="row" id="page3">
             <div class="col s12">
                 <h1>Page 3 - Testing</h1>
