--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
 
-        <!-- Page 2 -->
+        <!-- Calendar Page -->
         <div class="row" id="page2">
             <div class="col s12">
                 <h1>Schedule</h1>
@@ -137,16 +137,151 @@
             </div>
         </div>
 
-        <!-- Page 3 -->
+        <!-- Link Page -->
         <div class="row" id="page3">
-            <div class="col s12">
-                <h1>Page 3 - Testing</h1>
-                <!-- <iframe
-                    src="https://zerossive.github.io/Homepage/"
-                    width="75%"
-                    height="650"
-                ></iframe> -->
+            <div class="col s12" id="linkData">
+                <h1>External Links</h1>
+
+                <!-- Left Side -->
+                <div class="col s12 m6" id="linkArea">
+                    <!-- Custom Link 1 -->
+                    <!-- <div
+                        class="col s12"
+                        id="customLink1"
+                        onmouseup=""
+                        title=""
+                        oncontextmenu="openContextMenu('customLink1'); return false;"
+                    >
+                        <div
+                            class="btn-large col s12 waves-effect waves-light hoverable"
+                        >
+                            <i class="material-icons left">add_link</i>custom
+                        </div>
+                    </div> -->
+                </div>
+
+                <!-- Right Side -->
+                <div class="col s12 m6">
+                    <!-- <ul class="collapsible">
+                        <li>
+                            <div
+                                class="collapsible-header blue-grey darken-2"
+                                oncontextmenu="window.location = 'https://www.youtube.com/feed/subscriptions'; return false"
+                            >
+                                <i class="material-icons">play_arrow</i>YouTube
+                            </div>
+                            <div class="collapsible-body">
+                                <div class="row">
+                                    <div class="input-field col s3">
+                                        <input
+                                            type="text"
+                                            placeholder="Icon Name"
+                                            class="white-text"
+                                        />
+                                    </div>
+                                    <div class="input-field col s3">
+                                        <input
+                                            type="text"
+                                            placeholder="Title"
+                                            class="white-text"
+                                        />
+                                    </div>
+                                    <div class="input-field col s3">
+                                        <input
+                                            type="text"
+                                            placeholder="Address"
+                                            class="white-text"
+                                        />
+                                    </div>
+                                    <div class="btn">Submit</div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul> -->
+                </div>
             </div>
+        </div>
+
+        <div
+            class="row"
+            style="
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                z-index: 999;
+                top: 0vh;
+                left: 0vw;
+                visibility: hidden;
+            "
+            id="linkPopup"
+        >
+            <div
+                class="col s10 push-s1 m4 push-m4 blue-grey darken-2 hoverable"
+                style="
+                    border-radius: 10px;
+                    box-shadow: 0px 0px 15px white;
+                    z-index: 2;
+                    margin-top: 25vh;
+                "
+            >
+                <!-- Icon -->
+                <div class="input-field col s12">
+                    <input
+                        id="icon1"
+                        type="text"
+                        placeholder="Icon"
+                        class="white-text"
+                    />
+                </div>
+
+                <!-- Color -->
+                <div class="input-field col s12">
+                    <input
+                        id="color1"
+                        type="text"
+                        placeholder="Color"
+                        class="white-text"
+                    />
+                </div>
+
+                <!-- Title -->
+                <div class="input-field col s12">
+                    <input
+                        id="title1"
+                        type="text"
+                        placeholder="Title"
+                        class="white-text"
+                    />
+                </div>
+
+                <!-- Link -->
+                <div class="input-field col s12">
+                    <input
+                        id="link1"
+                        type="text"
+                        placeholder="Link"
+                        class="white-text"
+                    />
+                </div>
+                <div
+                    class="btn col s12 white blue-grey-text"
+                    onclick="submitLinkPopup()"
+                >
+                    Submit Changes
+                </div>
+                <div class="row"></div>
+            </div>
+            <div
+                class="col s12 blue-grey darken-4"
+                style="
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    z-index: 0;
+                    opacity: 0.75;
+                "
+                onclick="document.querySelector('#linkPopup').style.visibility = 'hidden'"
+            ></div>
         </div>
 
         <!-- Local Weather JS -->
